--- a/index.html
+++ b/index.html
@@ -359,103 +359,103 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                 Туры выходного дня "Новый Поворот"
             </p>
             <div class="row">
-                <!--  Пиво -->
+
+                <!--  Шары -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html ">
+                            <img src="images/Baloon-fast/balloon-festival-min.jpg " alt="Фестиваль Воздушных Шаров" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Beer.html">
-                                Натуральное пиво
+                            <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                                Фестиваль Воздушных Шаров
                             </a>
                         </h5>
                         <p class="">
-                            Экскурсия и дегустация в частной пивоварне
+                            Умань, Каменец Подольский...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>17 Апреля 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 22-23 Мая 2021 Года</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <!--  //Шары -->
+
+                 <!--  Zoo-->
+                <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>335грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Экскурсия</a>
+                        </h5>
+                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>10 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Пиво -->
+                <!--  //Zoo -->    
 
-                <!--  Турция -->
-                <div class="col-lg-3 col-sm-6 mb-5">
+                <!-- Сырная ферма и Пасека -->
+                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Turkey.html">
-                            <img src="images/Turkey-mini.jpg" alt="Turkey" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
+                            <img src="images/cheese-farm-min.jpg" alt="Cheese-farm" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>190$</span></p>
+                        <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
-                        </h5>
-                        <p class="">Мраморное и Средиземное море..</p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>8 Дней</span></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--  //Турция  -->
-
-                <!--  LOL -->
-                <div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-LOL.html">
-                            <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>180грн.</span></p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-LOL.html">
-                               ЛОЛ
-                            </a>
+                            <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
                         </h5>
                         <p class="">
-                         Праздник в стиле Лол с любимыми персонажами!
+                          Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 3 Апреля 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>18 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //LOL -->
+                <!-- Сырная ферма и Пасека -->
                 
-                <!--  Лимонарий  -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                <!--  Хортица -->
+                <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/Limonariy-mini.jpg" alt="Лимонарий" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Hortica.html">
+                            <img src="images/hortica-mini.jpg" alt="Hortica" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>150грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>95грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                                Лимонарий
+                            <a href="https://novipovorot.pp.ua/page-Hortica.html">
+                                Хортица
                             </a>
                         </h5>
-                        <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
+                        <p class="">Тайны и загадки родного острова Хортица... </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Апреля 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>11 Апреля 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Лимонарий -->
+                <!--  //Хортица  -->
+                
             </div>
             <div class="view-package text-center mt-4">
                 <a href="packages.html">Просмотреть все туры</a>
@@ -463,7 +463,6 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
         </div>
     </section>
     <!-- tour packages -->
-
 
     <!-- text -->
     <section class="text-content">
@@ -491,11 +490,12 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
+                <!-- Фестиваль Воздушных Шаров -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Лимонарий</h4>
+                    <h4 class="destination mb-3">Фестиваль Воздушных Шаров</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/Limonariy-max.jpg" class="img-fluid" alt="Лимонарий">
+                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                            <img src="images/Baloon-fast/balloon-festival-max.jpg" class="img-fluid" alt="Фестиваль Воздушных Шаров">
                         </a>
                         <div class="rating">
                             <ul>
@@ -509,17 +509,19 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Лимонарий</h4>
+                            <h4>Фестиваль Воздушных Шаров</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
+                <!-- //Фестиваль Воздушных Шаров -->
 
+                <!-- Zoo -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">ЛОЛ</h4>
+                    <h4 class="destination mb-3"> Экскурсия </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-LOL.html">
-                            <img src="images/lol-max.jpg" class="img-fluid" alt="Tik Tok">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-max.jpg" class="img-fluid" alt="Tik Tok">
                         </a>
                         <div class="rating">
                             <ul>
@@ -533,17 +535,19 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>ЛОЛ</h4>
+                            <h4> Экскурсия </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
+                <!-- //Zoo -->
 
+                <!-- Сырная ферма и Пасека -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-                    <h4 class="destination mb-3">Пиво</h4>
+                    <h4 class="destination mb-3"> Сырная ферма и Пасека </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="images/beer-max.jpg" class="img-fluid" alt="Beer">
+                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
+                            <img src="images/cheese-farm-max.jpg" class="img-fluid" alt=" Сырная ферма и Пасека ">
                         </a>
                         <div class="rating">
                             <ul>
@@ -557,17 +561,19 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Пиво</h4>
+                            <h4> Сырная ферма и Пасека </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
+                <!-- //Сырная ферма и Пасека -->
 
+                <!-- Хортица -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-                    <h4 class="destination mb-3">Турция</h4>
+                    <h4 class="destination mb-3"> Хортица </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Turkey.html">
-                            <img src="images/Turkey-max.jpg" class="img-fluid" alt="Turkey">
+                        <a href="https://novipovorot.pp.ua/page-Hortica.html">
+                            <img src="images/hortica-max.jpg" class="img-fluid" alt="Хортица">
                         </a>
                         <div class="rating">
                             <ul>
@@ -581,11 +587,12 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Турция</h4>
+                            <h4> Хортица </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
+               <!-- //Хортица -->
             </div>
         </div>
     </section>
