--- a/packages.html
+++ b/packages.html
@@ -458,12 +458,12 @@
             <p class="text mt-2 mb-5 text-center">Туры выходного дня "Новый Поворот"</p>
             <div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 
-                <!--  Лимонарий   -->
+                <!-- Фестиваль Воздушных Шаров -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Лимонарий</h4>
+                    <h4 class="destination mb-3">Фестиваль Воздушных Шаров</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                            <img src="images/Limonariy-max.jpg" class="img-fluid" alt="Лимонарий">
+                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                            <img src="images/Baloon-fast/balloon-festival-max.jpg" class="img-fluid" alt="Фестиваль Воздушных Шаров">
                         </a>
                         <div class="rating">
                             <ul>
@@ -477,19 +477,19 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Лимонарий</h4>
+                            <h4>Фестиваль Воздушных Шаров</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!--  //Лимонарий   -->
+                <!-- //Фестиваль Воздушных Шаров -->
 
-                <!--  LOL   -->
+                <!-- Zoo -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">ЛОЛ</h4>
+                    <h4 class="destination mb-3"> Экскурсия </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-LOL.html">
-                            <img src="images/lol-max.jpg" class="img-fluid" alt="Tik Tok">
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-max.jpg" class="img-fluid" alt="Tik Tok">
                         </a>
                         <div class="rating">
                             <ul>
@@ -503,20 +503,19 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>ЛОЛ</h4>
+                            <h4> Экскурсия </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
+                <!-- //Zoo -->
 
-                <!--  //LOL   -->
-
-                <!--  Пиво   -->
+                <!-- Сырная ферма и Пасека -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-                    <h4 class="destination mb-3">Пиво</h4>
+                    <h4 class="destination mb-3"> Сырная ферма и Пасека </h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Beer.html">
-                            <img src="images/beer-max.jpg" class="img-fluid" alt="Пиво">
+                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
+                            <img src="images/cheese-farm-max.jpg" class="img-fluid" alt=" Сырная ферма и Пасека ">
                         </a>
                         <div class="rating">
                             <ul>
@@ -530,20 +529,20 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Пиво</h4>
+                            <h4> Сырная ферма и Пасека </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!--  //Пиво   -->
+                <!-- //Сырная ферма и Пасека -->
 
-                <!--  Турция   -->
+                <!-- Хортица -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-                    <h4 class="destination mb-3">Турция</h4>
+                    <h4 class="destination mb-3"> Хортица </h4>
                     <div class="image-position position-relative">
-		      <a href="https://novipovorot.pp.ua/page-Turkey.html">
-                        <img src="images/Turkey-max.jpg" class="img-fluid" alt="Турция">
-	              </a>
+                        <a href="https://novipovorot.pp.ua/page-Hortica.html">
+                            <img src="images/hortica-max.jpg" class="img-fluid" alt="Хортица">
+                        </a>
                         <div class="rating">
                             <ul>
                                 <li><span class="fa fa-star"></span></li>
@@ -556,13 +555,12 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Турция</h4>
+                            <h4> Хортица </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
                 </div>
-                <!--  //Турция   -->
-
+               <!-- //Хортица -->
 
             </div>
         </div>
