--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -249,9 +249,9 @@
 
                 <!-- Фестиваль Воздушных Шаров -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-                    <h4 class="destination mb-3">Фестиваль Воздушных Шаров</h4>
+                    <h4 class="destination mb-3">Фестиваль</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                        <a href="https://novipovorot.pp.ua/page-balloon-fastival.html">
                             <img src="images/Baloon-fast/balloon-festival-max.jpg" class="img-fluid" alt="Фестиваль Воздушных Шаров">
                         </a>
                         <div class="rating">
@@ -266,7 +266,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4>Фестиваль Воздушных Шаров</h4>
+                            <h4>Фестиваль</h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
@@ -301,7 +301,7 @@
 
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-                    <h4 class="destination mb-3"> Сырная ферма и Пасека </h4>
+                    <h4 class="destination mb-3"> Сырная ферма</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
                             <img src="images/cheese-farm-max.jpg" class="img-fluid" alt=" Сырная ферма и Пасека ">
@@ -318,7 +318,7 @@
                     </div>
                     <div class="destinations-info">
                         <div class="caption mb-lg-3">
-                            <h4> Сырная ферма и Пасека </h4>
+                            <h4> Сырная ферма </h4>
                             <a href="booking.html">Забронировать</a>
                         </div>
                     </div>
