--- a/packages.html
+++ b/packages.html
@@ -284,7 +284,7 @@
                 <!--  //Турция  -->
 
                 <!--  Лимонарий   -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+              <!--  <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/Limonariy-mini.jpg" alt="Limonariy" class="img-fluid" />
@@ -305,6 +305,7 @@
                         </ul>
                     </div>
                 </div>
+                -->
                 <!--  //Лимонарий -->
 
                 <!--  TikTok -->
