--- a/packages.html
+++ b/packages.html
@@ -287,7 +287,7 @@
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-gold-mines.html">
-                            <img src="images/golds-mines-max.jpg" alt="Золотые прииски" class="img-fluid" />
+                            <img src="images/golds-mines-min.jpg" alt="Золотые прииски" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>150грн.</span></p>
                     </div>
@@ -512,7 +512,7 @@
 
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-                    <h4 class="destination mb-3"> Сырная ферма</h4>
+                    <h4 class="destination mb-3"> Ферма</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
                             <img src="images/cheese-farm-max.jpg" class="img-fluid" alt=" Сырная ферма и Пасека ">
