--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
 
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-                    <h4 class="destination mb-3"> Сырная ферма</h4>
+                    <h4 class="destination mb-3"> Ферма</h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
                             <img src="images/cheese-farm-max.jpg" class="img-fluid" alt=" Сырная ферма и Пасека ">
