--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -127,7 +127,7 @@
                        <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
                             <img src="images/cofe-mini.jpg" alt="Beer" class="img-fluid" />
                        </a>
-                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                      <!--  <p><span class="fa fa-tags"></span> <span>195грн.</span></p> -->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
@@ -153,7 +153,7 @@
                         <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
                             <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>215грн.</span></p>
+                       <!-- <p><span class="fa fa-tags"></span> <span>215грн.</span></p> -->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
@@ -179,7 +179,7 @@
                         <a href="https://novipovorot.pp.ua/page-eight-march.html">
                             <img src="images/eight-march-mini.jpg" alt="eight-march" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                      <!--  <p><span class="fa fa-tags"></span> <span>195грн.</span></p> -->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
@@ -204,7 +204,7 @@
                         <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
                             <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>2100грн.</span></p>
+                        <!-- <p><span class="fa fa-tags"></span> <span>2100грн.</span></p> -->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
@@ -224,7 +224,7 @@
                         <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/Limonariy-mini.jpg" alt="Limonariy" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>150грн.</span></p>
+                        <!-- <p><span class="fa fa-tags"></span> <span>150грн.</span></p> -->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
