--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -132,12 +132,12 @@
                         </h4>
                        
                         <p class="txt-alg-jf">
-                            Селфи с оленем !? 
+                            Селфи с оленем!? 
                             Око Карпат - Озеро Синевир!
                             Цветущая Долина Нарциссов - цветы Ледникового периода!
-                            Кому молодости ? !- Дворец графов Шенборнов 
+                            Кому молодости?! Дворец графов Шенборнов 
                             Дегустация вулканического вина и венгерских национальных блюд
-                            Читай полностью описание до конца и бронируй !
+                            Читай полностью описание до конца и бронируй!
                         </p>
                         
                         <hr>
