--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -163,20 +163,21 @@
                         </p>
                         <hr>
                         <!-- Alert warning -->
-                        <div class="alert alert-warning mt-3 ">
+                       <!-- <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
                              Последние экскурсии в 2021 году. 
                              Следующие экскурсии не раньше декабря, января. Цена 150 грн. от 4-200 лет, до 4 лет бесплатно
                             </span>
-                        </div>
+                        </div> -->
                         <!-- //Alert warning -->
-                        <ul class="listing">
+                     <!--   <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>150 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
+                       -->
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
                         </p>
