--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -105,7 +105,7 @@
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
-                     <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры</a></li>
                      <li class="breadcrumb-item active" aria-current="page">50 оттенков кофе Isla</li>
                    </ol>
                 </nav>
@@ -133,8 +133,8 @@
 			    Экскурсия в настоящий Мир кофе, от зеленых зернышек до самого вкусного напитка дня! 
                         </p>
                         <hr>
-                        <div class="alert alert-warning mt-3">
-                            <!--<button type="button" class="close" data-dismiss="alert">&times;</button>-->
+                      <!--  <div class="alert alert-warning mt-3">
+                           <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br /> <span>
                              Поспешите бронировать, количество мест ограничено!
                             Запись уже открыта!</span>
@@ -143,7 +143,7 @@
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
-                        <br>
+                        <br> -->
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
                         </p>
@@ -204,13 +204,13 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>12:30</b> - сбор группы, после минутки позитива пешая прогулка до места начала экскурсии! Участие по предварительной записи и предоплате 50%!
+                                            <b>--</b> - сбор группы, после минутки позитива пешая прогулка до места начала экскурсии! Участие по предварительной записи и предоплате 50%!
                                         </p>
-                                        <p><b>18:00 - 18:40</b> - экскурсия
+                                        <p><b>--</b> - экскурсия
                                             по частной пивоварне. Мы увидим варочный
                                             и бродильный цеха, почувствуем дух хмеля
                                             и солода. Узнаем секреты ручной варки пива!</p>
-                                        <p><b>12:40 - 14:40</b> 
+                                        <p><b>--</b> 
                                           Мы увидим весь "путь кофе" от зеленых зернышек, до ароматного напитка. 
 					  Услышим рассказ местного экскурсовода о   видах кофе и вариациях его
 					  приготовления , тонкостях кофейного искусства! 
