--- a/page-eight-march.html
+++ b/page-eight-march.html
@@ -121,7 +121,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>6 марта 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span>
                                 </li>
                             </ul>
                         </div>
@@ -135,7 +135,7 @@
                         </p>
                         <hr>
                         <!-- Alert warning -->
-                        <div class="alert alert-warning mt-3 ">
+                       <!-- <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">Количество мест ограничено! Запись уже открыта!</span>
@@ -144,7 +144,7 @@
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>195 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
-                        <br>
+                        <br>-->
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
                         </p>
@@ -206,11 +206,11 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                        <p><strong>10:20</strong>
+                                        <p><strong>--</strong>
                                             сбор группы и после минутки позитива пешая прогулка до места начала
                                             праздника!
                                         </p>
-                                        <p><strong>10:30 - 11:30</strong>
+                                        <p><strong>--</strong>
                                             Мастер-класс по созданию Сладкого
                                             букета к 8 марта! Вкуснейшие маршмеллоу, красивая
                                             упаковочка и магия...
