--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -138,8 +138,8 @@
                           Не забудь своих друзей, в большой компании всегда веселей и вкусней!
                         </p>
                         <hr>
-                        <div class="alert alert-warning mt-3">
-                            <!--<button type="button" class="close" data-dismiss="alert">&times;</button>-->
+                       <!-- <div class="alert alert-warning mt-3">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br /> <span>
                              Поспешите бронировать, количество мест ограничено!
                             Запись уже открыта!</span>
@@ -148,7 +148,7 @@
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>215 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
-                        <br>
+                        <br> -->
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
                         </p>
