--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -136,20 +136,20 @@
                         </p>
                         <hr>
                         <!-- Alert warning -->
-                        <div class="alert alert-warning mt-3 ">
+                       <!-- <div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
                             <span class="txt-alg-jf">
                                 Предоплата 1100 грн. 3 дня в Одессе!
                                 Бронируйте уже сейчас, места в группе ограничены!
                             </span>
-                        </div>
+                        </div>-->
                         <!-- //Alert warning -->
-                        <ul class="listing">
+                        <!--<ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>2100 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
-                        <br>
+                        <br>-->
                         <p>
                             Не забудь своих друзей, в большой компании всегда веселей!
                         </p>
