--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -190,7 +190,7 @@
                         </h5>
                         <p class="">Оригинальный подарок своими руками к 8 марта!</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>6 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
@@ -211,7 +211,7 @@
                         <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
                         <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>5-9 Марта 2021 Года</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
