--- a/page-TicToc-pati.html
+++ b/page-TicToc-pati.html
@@ -209,9 +209,9 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
                                         <p>
-                                            <b>--</b> - сбор группы р-не Малого рынка!
+                                            <b>--</b> сбор группы р-не Малого рынка!
                                         </p>
-                                        <p><b>--</b> - 
+                                        <p><b>--</b> 
                                           Мы станцуем зажигательные танцы,
                                           поиграем в самые веселые игры. 
                                           Сделаем фото и видео TIK TOK PATI.
