--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                     <h4 class="destination mb-3"> Хортица </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Hortica.html">
-                            <img src="images/hortica-max.jpg" class="img-fluid" alt="Хортица">
+                            <img src="images/Hortica-max2.jpg" class="img-fluid" alt="Хортица">
                         </a>
                         <div class="rating">
                             <ul>
