--- a/packages.html
+++ b/packages.html
@@ -542,7 +542,7 @@
                     <h4 class="destination mb-3"> Хортица </h4>
                     <div class="image-position position-relative">
                         <a href="https://novipovorot.pp.ua/page-Hortica.html">
-                            <img src="images/hortica-max.jpg" class="img-fluid" alt="Хортица">
+                            <img src="images/Hortica-max3.jpg" class="img-fluid" alt="Хортица">
                         </a>
                         <div class="rating">
                             <ul>
