--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -278,7 +278,7 @@
                      
                         <!-- //Описание экскурсии -->
                       
-                      <!-- Карусель --><!--
+                      <!-- Карусель -->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -292,28 +292,28 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-4.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-4.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-5.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-5.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-6.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-6.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-7.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-7.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="/images/Cheese-Farm/cheese-farm-8.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-3" src="/images/Cheese-Farm/cheese-farm-8.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -325,7 +325,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
--->
+
 <!-- //Карусель -->
 
                         <div class="alert alert-success">
