--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -292,28 +292,28 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="d-block col-3 col-md-2 col-lg-2 col-xl-3" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block col-sm-2 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block col-sm-2 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block col-sm-2 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-4.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-4.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block col-sm-2 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-5.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-5.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block col-sm-2 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-6.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-6.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block col-sm-2 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-7.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-7.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block col-sm-2 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-8.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+      <img class="d-block col-sm-8 col-md-2 col-lg-2 col-xl-3 " src="/images/Cheese-Farm/cheese-farm-8.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
