--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -281,9 +281,9 @@
                       <!-- Карусель -->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="col-sm-active col-md-active "></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="col-sm-active col-md-active " ></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2" class="col-sm-active col-md-active " ></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
@@ -294,10 +294,10 @@
     <div class="carousel-item active ">
       <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
-    <div class="carousel-item active ">
+    <div class="carousel-item">
       <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
