--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -282,8 +282,8 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="col-sm-active col-md-active "></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="col-sm-active col-md-active " ></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2" class="col-sm-active col-md-active " ></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1" class="col-md-active " ></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2" class="col-md-active " ></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
