--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -291,13 +291,13 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active ">
+    <div class="carousel-item col-sm-active col-md-active">
       <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item col-md-active">
       <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item col-md-active">
       <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
     <div class="carousel-item">
