--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -278,7 +278,7 @@
                      
                         <!-- //Описание экскурсии -->
                       
-                      <!-- Карусель -->
+                      <!-- Карусель --><!--
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -325,7 +325,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<br>
+<br>-->
 <!-- //Карусель -->
 
                         <div class="alert alert-success">
