--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -293,28 +293,28 @@
   <div class="carousel-inner" w-100 role="listbox">
     <div class="carousel-item active">
         <div class="row">
-            <div class="col">
+            <div class="col carousel-item ">
                 <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4" src="/images/Cheese-Farm/cheese-farm-1.jpg" data-src="holder.js/900x400?theme=social" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
-            <div class="col">
+            <div class="col carousel-item ">
               <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
-            <div class="col">
+            <div class="col carousel-item ">
               <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
-            <div class="col">
+            <div class="col carousel-item ">
               <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-4.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
-            <div class="col">
+            <div class="col carousel-item ">
               <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-5.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
-            <div class="col">
+            <div class="col carousel-item ">
               <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-6.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
-            <div class="col">
+            <div class="col carousel-item ">
               <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-7.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
-            <div class="col">
+            <div class="col carousel-item ">
               <img class="d-block col-sm-8 col-md-4 col-lg-4 col-xl-4 " src="/images/Cheese-Farm/cheese-farm-8.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
             </div>
         </div>
