--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -153,7 +153,7 @@
                             <p class="mb-1">30.04-3.05</p>
                             <p class="mb-1">07-10.05</p>
                             <small>Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><strong>ШОК ВСЕГО 10%</strong> предоплата по брони 420/380грн.
+                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -164,7 +164,7 @@
                             <p class="mb-1">03-06</p>
                             <p class="mb-1">18-21</p>
                             <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><strong>ШОК ВСЕГО 10%</strong> предоплата по брони 420/380грн.
+                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -175,7 +175,7 @@
                             <p class="mb-1">08-11</p>
                             <p class="mb-1"> 29-01.08</p>
                             <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                             <small><strong>ШОК ВСЕГО 10%</strong> предоплата по брони 420/380грн.
+                             <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -186,7 +186,7 @@
                             <p class="mb-1">12-15</p>
                             <p class="mb-1"> 21-24</p>
                             <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><strong>ШОК ВСЕГО 10%</strong> предоплата по брони 420/380грн.
+                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -197,7 +197,7 @@
                             <p class="mb-1">09-12</p>
                             <p class="mb-1">23-26</p>
                             <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><strong>ШОК ВСЕГО 10%</strong> предоплата по брони 420/380грн.
+                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -207,15 +207,15 @@
                             </div>
                             <p class="mb-1">14-17</p>
                             <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><strong>ШОК ВСЕГО 10%</strong> предоплата по брони 420/380грн.
+                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                         </div>
-                            
+                        <br> 
                         
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 390 Грн.</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span> 4200 Грн.</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>4 Дня</span></li>
                         </ul>
                         <br>
                         <p>
