--- a/page-Yavorovskaya-niagara.html
+++ b/page-Yavorovskaya-niagara.html
@@ -152,9 +152,9 @@
                             </div>
                             <p class="mb-1">30.04-3.05</p>
                             <p class="mb-1">07-10.05</p>
-                            <small>Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
-                             дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
+                            <small>Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
+                            ШОК ВСЕГО 10% предоплата по брони 420/380грн.
+                            дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
@@ -163,8 +163,8 @@
                             </div>
                             <p class="mb-1">03-06</p>
                             <p class="mb-1">18-21</p>
-                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
+                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
+                            ШОК ВСЕГО 10% предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -174,8 +174,8 @@
                             </div>
                             <p class="mb-1">08-11</p>
                             <p class="mb-1"> 29-01.08</p>
-                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                             <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
+                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
+                             ШОК ВСЕГО 10% предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -185,8 +185,8 @@
                             </div>
                             <p class="mb-1">12-15</p>
                             <p class="mb-1"> 21-24</p>
-                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
+                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
+                             ШОК ВСЕГО 10% предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -196,8 +196,8 @@
                             </div>
                             <p class="mb-1">09-12</p>
                             <p class="mb-1">23-26</p>
-                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
+                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
+                             ШОК ВСЕГО 10% предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                           <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -206,8 +206,8 @@
                               <small class="text-muted">4 Дня</small>
                             </div>
                             <p class="mb-1">14-17</p>
-                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.</small>
-                            <small><b>ШОК ВСЕГО 10%</b> предоплата по брони 420/380грн.
+                            <small class="text-muted">Цена билета: 4200грн. - 4 дня, дети от 6до 12 лет - 3800грн.
+                             ШОК ВСЕГО 10% предоплата по брони 420/380грн.
                              дети до 5 лет бесплатно (без отдельных мест в транспорте, при поселении и без питания)</small>
                           </a>
                         </div>
